<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/topRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/LanguageListText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/englishButton"
        android:onClick="englishButton"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:background="@color/grey"
        android:text="@string/englishButton"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRow" />

    <Button
        android:id="@+id/spanishButton"
        android:onClick="spanishButton"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginTop="75dp"
        android:background="@color/grey"
        android:text="@string/spanishButton"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishButton" />

    <Button
        android:id="@+id/chineseButton"
        android:onClick="chineseButton"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginTop="75dp"
        android:background="@color/grey"
        android:text="@string/chineseButton"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spanishButton" />

    <TextView
        android:id="@+id/bottomRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ostText"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>