<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MakeWordActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple"
        android:contentDescription="@string/hintpic"/>

    <EditText
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/hint"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:onClick="confirm"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#369A2D"
        android:text="@string/check"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/skip"
        android:onClick="skipPic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:background="@color/grey"
        android:text="@string/showNext"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>